// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceMath #getInputToRatio edge cases gas: returns 0 if price is equal 1`] = `533`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps gas 1`] = `9922`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps snapshot 1`] = `
Object {
  "amountIn": "11305074013661421002",
  "amountInLessFee": "11237243569579452475",
  "amountOut": "183503419072273967",
  "lpFee": 60,
  "priceAfterSwap": "389422264390112072139787224691507200",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112072146146463639740389",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps gas 1`] = `9932`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps snapshot 1`] = `
Object {
  "amountIn": "21133345019035461735",
  "amountInLessFee": "20710678118654752500",
  "amountOut": "292893218813452475",
  "lpFee": 200,
  "priceAfterSwap": "519229685853482762853049632922009600",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "519229685853482762860392649559216768",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "519229685853482762853049632922009600",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps gas 1`] = `9982`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps snapshot 1`] = `
Object {
  "amountIn": "415459942199694131",
  "amountInLessFee": "414213562373095048",
  "amountOut": "29289321881345247519",
  "lpFee": 30,
  "priceAfterSwap": "259614842926741381723916990267895141",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381356766158407536695",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps gas 1`] = `9982`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps snapshot 1`] = `
Object {
  "amountIn": "416713845445769666",
  "amountInLessFee": "414213562373095048",
  "amountOut": "29289321881345247519",
  "lpFee": 60,
  "priceAfterSwap": "259614842926741381723916990267895141",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381356766158407536695",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves gas 1`] = `4314`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves snapshot 1`] = `
Object {
  "amountIn": "417",
  "amountInLessFee": "414",
  "amountOut": "29278",
  "lpFee": 60,
  "priceAfterSwap": "259695628309264554133616521495830006",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259332293910411217661580047402806957",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000",
  "reserve1": "100000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps gas 1`] = `9982`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps snapshot 1`] = `
Object {
  "amountIn": "155399837648670547",
  "amountInLessFee": "154700538379251529",
  "amountOut": "13397459621556135322",
  "lpFee": 45,
  "priceAfterSwap": "389422264390112072153277207641951089",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112071483274721103237925",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(101,102,1934,2) gas 1`] = `3927`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(101,102,1934,2) snapshot 1`] = `
Object {
  "amountIn": "2",
  "amountInLessFee": "1",
  "amountOut": "0",
  "lpFee": 1934,
  "priceAfterSwap": "5295114618109774710283575464452177",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "5346523497897248251160115032068217",
  "priceBeforeSwap": "5243705738322301169407035896836136",
  "priceTarget": "5296662025391377663863959305437419",
  "reserve0": "101",
  "reserve1": "102",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(5253224048874618374,355610057740100969,1,1,false) gas 1`] = `10031`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(5253224048874618374,355610057740100969,1,1,false) snapshot 1`] = `
Object {
  "amountIn": "1018092967490665075",
  "amountInLessFee": "1017991158193916008",
  "amountOut": "3893222844979552059",
  "lpFee": 1,
  "priceAfterSwap": "5244219827120175900425260041362222",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "5244219827120175904243121998884026",
  "priceBeforeSwap": "351485672129836237047868624898702",
  "priceTarget": "5244219827120175904815801292512296",
  "reserve0": "5253224048874618374",
  "reserve1": "355610057740100969",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(44155072587566675454184985,1420193175776351360096,1,1,false) gas 1`] = `11993`;

exports[`PriceMath #getInputToRatio invariants echidna failed test: getInputToRatioInvariants(44155072587566675454184985,1420193175776351360096,1,1,false) snapshot 1`] = `
Object {
  "amountIn": "250270922399634799436261",
  "amountInLessFee": "250245895307394835956317",
  "amountOut": "43905898242533832694465763",
  "lpFee": 1,
  "priceAfterSwap": "5244219827120175904815775870143206",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "5244219827120175904815796708150657",
  "priceBeforeSwap": "167003792157111338873834151569",
  "priceTarget": "5244219827120175904815801292512296",
  "reserve0": "44155072587566675454184985",
  "reserve1": "1420193175776351360096",
  "zeroForOne": false,
}
`;
